--- a/Corretora.Web/Views/_ViewImports.cshtml
+++ b/Corretora.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Corretora.Web
-@namespace Corretora.Web.Pages
+@using Corretora.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
