Ajuste na view model. Carregando as informações.

--- a/Corretora.Web/Views/Home/Index.cshtml
+++ b/Corretora.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h4 class="display-4">Relação de Dados do Período</h4>
+    <h4 class="display-4">Dados do Período</h4>
 
 <table class="table">
     <thead>
