--- a/Corretora.Web/Views/Home/Privacy.cshtml
+++ b/Corretora.Web/Views/Home/Privacy.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>PROJETO DE BLOCO ENGENHARIA DE SOFTWARE.
+    ELDER DA SILVA SOUZA
+</p>
